# PortfolioLab

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
core/: __init__.py  backtest.py  constants.py  data_provider.py  opt_engine.py  pdf_shared.py  report.py
pages/: 1_Stocks.py  2_Portfolio.py  3_About.py
scripts/: verify_metrics.py
static/: manifest.json  sw.js
tests/: conftest.py  test_backtest.py  test_data_provider.py  test_opt_engine.py  test_optimizer_wrapper.py
utils/: __init__.py  optimizer_wrapper.py  pdf_generator.py  session_manager.py  ssl_fix.py  styles.py  visualizations.py
