[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-litterman-optimizer"
version = "1.0.0"
description = "Black-Litterman Portfolio Optimizer with Streamlit UI"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}

dependencies = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.35",
    "pyportfolioopt",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",
    "fpdf2>=2.7.8",
    "Pillow>=10.2.0",
    "cvxpy>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
bl-optimize = "core.opt_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["core*", "utils*", "pages*"]
